Imported from util-linux-2.13-pre6 tarball.

--- a/config/include-Makefile.am
+++ b/config/include-Makefile.am
@@ -4,7 +4,7 @@ datadir = $(prefix)/usr/share
 infodir = $(datadir)/info
 mandir = $(datadir)/man
 
-AM_CPPFLAGS = -include $(top_srcdir)/config.h -I$(top_srcdir)/include
+AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include
 
 DEFAULT_INCLUDES =
 
