--- a/fdisk/Makefile.am
+++ b/fdisk/Makefile.am
@@ -4,7 +4,7 @@ if !M68K
 
 sbin_PROGRAMS = fdisk
 man_MANS = fdisk.8
-fdisk_SOURCES = fdisk.c llseek.c disksize.c fdiskbsdlabel.c fdisksgilabel.c \
+fdisk_SOURCES = fdisk.c disksize.c fdiskbsdlabel.c fdisksgilabel.c \
 	fdisksunlabel.c fdiskaixlabel.c i386_sys_types.c partname.c
 
 if !SPARC
@@ -16,13 +16,13 @@ sfdisk_SOURCES = sfdisk.c disksize.c i386_sys_types.c partname.c
 if USE_SLANG
 sbin_PROGRAMS += cfdisk
 man_MANS += cfdisk.8
-cfdisk_SOURCES = cfdisk.c llseek.c disksize.c i386_sys_types.c
+cfdisk_SOURCES = cfdisk.c disksize.c i386_sys_types.c
 cfdisk_LDADD = -lslang
 else
 if HAVE_NCURSES
 sbin_PROGRAMS += cfdisk
 man_MANS += cfdisk.8
-cfdisk_SOURCES = cfdisk.c llseek.c disksize.c i386_sys_types.c
+cfdisk_SOURCES = cfdisk.c disksize.c i386_sys_types.c
 cfdisk_LDADD = -lncurses
 endif
 endif
