--- a/hwclock/Makefile.in
+++ b/hwclock/Makefile.in
@@ -231,7 +231,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 usrbinexecdir = $(prefix)/usr/bin
 usrsbinexecdir = $(prefix)/usr/sbin
-AM_CPPFLAGS = -include $(top_srcdir)/config.h -I$(top_srcdir)/include
+AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include
 DEFAULT_INCLUDES = 
 man_MANS = hwclock.8
 hwclock_SOURCES = hwclock.c cmos.c rtc.c kd.c
