--- a/getopt/Makefile.in
+++ b/getopt/Makefile.in
@@ -240,7 +240,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 usrbinexecdir = $(prefix)/usr/bin
 usrsbinexecdir = $(prefix)/usr/sbin
-AM_CPPFLAGS = -include $(top_srcdir)/config.h -I$(top_srcdir)/include
+AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include
 DEFAULT_INCLUDES = 
 getopt_CFLAGS = -DLIBCGETOPT=1
 man_MANS = getopt.1
