--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -237,7 +237,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 usrbinexecdir = $(prefix)/usr/bin
 usrsbinexecdir = $(prefix)/usr/sbin
-AM_CPPFLAGS = -include $(top_srcdir)/config.h -I$(top_srcdir)/include
+AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include
 DEFAULT_INCLUDES = 
 noinst_LIBRARIES = libmd5.a libenv.a libsetproctitle.a
 libmd5_a_SOURCES = md5.c
