--- a/login-utils/Makefile.in
+++ b/login-utils/Makefile.in
@@ -339,7 +339,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 usrbinexecdir = $(prefix)/usr/bin
 usrsbinexecdir = $(prefix)/usr/sbin
-AM_CPPFLAGS = -include $(top_srcdir)/config.h -I$(top_srcdir)/include
+AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include
 DEFAULT_INCLUDES = 
 man_MANS = $(am__append_2) $(am__append_4) $(am__append_6) \
 	$(am__append_10) $(am__append_24) $(am__append_26)
