--- a/misc-utils/Makefile.in
+++ b/misc-utils/Makefile.in
@@ -290,7 +290,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 usrbinexecdir = $(prefix)/usr/bin
 usrsbinexecdir = $(prefix)/usr/sbin
-AM_CPPFLAGS = -include $(top_srcdir)/config.h -I$(top_srcdir)/include
+AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include
 DEFAULT_INCLUDES = 
 mcookie_LDADD = $(top_srcdir)/lib/libmd5.a
 usrbinexec_SCRIPTS = chkdupexe scriptreplay $(am__append_7)
