--- a/partx/Makefile.in
+++ b/partx/Makefile.in
@@ -239,7 +239,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 usrbinexecdir = $(prefix)/usr/bin
 usrsbinexecdir = $(prefix)/usr/sbin
-AM_CPPFLAGS = -include $(top_srcdir)/config.h -I$(top_srcdir)/include
+AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include
 DEFAULT_INCLUDES = 
 @BUILD_PARTX_TRUE@partx_SOURCES = bsd.c dos.c partx.c solaris.c unixware.c gpt.c crc32.c
 all: all-am
