ipcs: add regression test for output headers
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,7 +3,9 @@ include $(top_srcdir)/config/include-Makefile.am
 EXTRA_DIST = 	commands.sh.in \
 		functions.sh \
 		ts-mount-paths \
-		expected/ts-mount-paths
+		ts-ipcs-headers \
+		expected/ts-mount-paths \
+		expected/ts-ipcs-headers
 
 distclean-local:
 	rm -rf output diff
