ipcs: add new tests for ipcs limits
The tests check if data from kernel and from the ipcs command are same.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,8 +6,12 @@ EXTRA_DIST = 	commands.sh.in \
 		functions.sh \
 		ts-mount-paths \
 		ts-ipcs-headers \
+		ts-ipcs-limits \
+		ts-ipcs-limits2 \
 		expected/ts-mount-paths \
-		expected/ts-ipcs-headers
+		expected/ts-ipcs-headers \
+		expected/ts-ipcs-limits \
+		expected/ts-ipcs-limits2
 
 distclean-local:
 	rm -rf output diff
