build-sys: remove generated autotools stuff from git
The generated autotools stuff shouldn't be maintained by SCM. After check out
from git use ./autogen.sh. For more details see README.devel.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,26 @@
 *~
+*.[ao]
+Makefile
+aclocal.m4
 autom4te.cache
-config.guess
+stamp-h.in
+Makefile.in
+configure
+config.cache
 config.h
+config.h.in
 config.log
+config.guess
 config.status
 config.sub
-Makefile
+stamp-h
 stamp-h1
+update.log
+m4
+ABOUT-NLS
+config.rpath
+mkinstalldirs
+compile
+depcomp
+install-sh
+missing
