--- a/login-utils/Makefile.am
+++ b/login-utils/Makefile.am
@@ -6,6 +6,8 @@ sbin_PROGRAMS =
 usrsbinexec_PROGRAMS =
 man_MANS =
 
+EXTRA_DIST = README.getty  README.modems-with-agetty  README.poeigl
+
 if BUILD_AGETTY
 sbin_PROGRAMS += agetty
 man_MANS += agetty.8
@@ -17,12 +19,14 @@ sbin_PROGRAMS += simpleinit shutdown initctl
 man_MANS += fastboot.8 fasthalt.8 halt.8 reboot.8 simpleinit.8 shutdown.8 \
 	initctl.8
 
+simpleinit_SOURCES = simpleinit.c my_crypt.h simpleinit.h
+initctl_SOURCES = initctl.c simpleinit.h
 
 if NEED_LIBCRYPT
 simpleinit_LDADD = -lcrypt
 endif
 
-endif
+endif 
 
 if BUILD_LAST
 usrbinexec_PROGRAMS += last
@@ -36,8 +40,10 @@ usrbinexec_PROGRAMS += chfn chsh newgrp
 usrsbinexec_PROGRAMS += vipw
 man_MANS += chfn.1 chsh.1 login.1 newgrp.1 vipw.8 vigr.8
 
-chfn_SOURCES = chfn.c islocal.c setpwnam.c
-chsh_SOURCES = chsh.c islocal.c setpwnam.c
+chfn_SOURCES = chfn.c islocal.c setpwnam.c islocal.h my_crypt.h setpwnam.h
+chsh_SOURCES = chsh.c islocal.c setpwnam.c islocal.h my_crypt.h setpwnam.h
+newgrp_SOURCES = newgrp.c my_crypt.h
+vipw_SOURCES = vipw.c setpwnam.h
 
 chfn_LDADD = ../lib/libenv.a
 chsh_LDADD = ../lib/libenv.a
@@ -56,16 +62,16 @@ if HAVE_PAM
 chfn_LDADD += -lpam -lpam_misc
 chsh_LDADD += -lpam -lpam_misc
 login_LDADD += -lpam -lpam_misc
-login_SOURCES = login.c
+login_SOURCES = login.c login.h my_crypt.h
 else
-login_SOURCES = login.c checktty.c
+login_SOURCES = login.c checktty.c login.h my_crypt.h
 endif
 
 
 if HAVE_SELINUX
-chfn_SOURCES += selinux_utils.c
+chfn_SOURCES += selinux_utils.c selinux_utils.h
 chfn_LDADD += -lselinux
-chsh_SOURCES += selinux_utils.c
+chsh_SOURCES += selinux_utils.c selinux_utils.h
 chsh_LDADD += -lselinux
 vipw_LDADD += -lselinux
 endif
@@ -84,7 +90,7 @@ endif
 if BUILD_WALL
 
 usrbinexec_PROGRAMS += wall
-wall_SOURCES = wall.c ttymsg.c
+wall_SOURCES = wall.c ttymsg.c ttymsg.h
 man_MANS += wall.1
 
 if USE_TTY_GROUP
@@ -94,7 +100,6 @@ install-exec-hook::
 endif
 
 endif
-
 
 if BUILD_INIT
 
