--- a/mount/Makefile.am
+++ b/mount/Makefile.am
@@ -1,29 +1,39 @@
 include $(top_srcdir)/config/include-Makefile.am
 
+EXTRA_DIST = README.mount swap.configure
+
 AM_CPPFLAGS += -DHAVE_NFS
 
 bin_PROGRAMS = mount umount
 sbin_PROGRAMS = losetup swapon
 man_MANS = fstab.5 nfs.5 mount.8 swapoff.8 swapon.8 umount.8 losetup.8
 
+MNTHDRS = fstab.h linux_fs.h mntent.h mount_constants.h my_dev_t.h paths.h \
+	get_label_uuid.h lomount.h mount_blkid.h mount_guess_fstype.h \
+	nfs_mount4.h realpath.h xmalloc.h getusername.h loop.h mount_by_label.h \
+	mount_guess_rootdev.h nfsmount.h sundries.h 
+
 mount_SOURCES = mount.c fstab.c sundries.c xmalloc.c realpath.c mntent.c \
 	get_label_uuid.c mount_by_label.c mount_blkid.c mount_guess_fstype.c \
 	getusername.c \
 	nfsmount.c nfsmount_xdr.c nfsmount_clnt.c \
-	lomount.c
+	lomount.c \
+	$(MNTHDRS)
 
 mount_LDADD = $(top_srcdir)/lib/libenv.a $(top_srcdir)/lib/libsetproctitle.a
 
 umount_SOURCES = umount.c fstab.c sundries.c xmalloc.c realpath.c mntent.c \
 	getusername.c get_label_uuid.c mount_by_label.c mount_blkid.c \
-	lomount.c
-
+	lomount.c \
+	$(MNTHDRS)
+	
 umount_LDADD = $(top_srcdir)/lib/libenv.a
 
 swapon_SOURCES = swapon.c xmalloc.c \
-	get_label_uuid.c mount_by_label.c mount_blkid.c
+	get_label_uuid.c mount_by_label.c mount_blkid.c \
+	swap_constants.h
 
-losetup_SOURCES = lomount.c
+losetup_SOURCES = lomount.c loop.h lomount.h
 losetup_CFLAGS = -DMAIN
 
 if HAVE_BLKID
