--- a/partx/Makefile.am
+++ b/partx/Makefile.am
@@ -3,6 +3,7 @@ include $(top_srcdir)/config/include-Makefile.am
 if BUILD_PARTX
 
 usrsbinexec_PROGRAMS = addpart delpart partx
-partx_SOURCES = bsd.c dos.c partx.c solaris.c unixware.c gpt.c crc32.c
+partx_SOURCES = bsd.c dos.c partx.c solaris.c unixware.c gpt.c crc32.c \
+		efi.h gpt.h crc32.h partx.h dos.h
 
 endif
