--- a/text-utils/Makefile.am
+++ b/text-utils/Makefile.am
@@ -1,8 +1,11 @@
 include $(top_srcdir)/config/include-Makefile.am
 
+EXTRA_DIST = README.clear  README.col  README.pg  README.reset LICENSE.pg
+
 usrbinexec_PROGRAMS = col colcrt colrm column hexdump rev line tailf
 
-hexdump_SOURCES = hexdump.c conv.c display.c hexsyntax.c odsyntax.c parse.c
+hexdump_SOURCES = hexdump.c conv.c display.c hexsyntax.c odsyntax.c parse.c \
+		  hexdump.h
 
 man_MANS = col.1 colcrt.1 colrm.1 column.1 hexdump.1 rev.1 line.1 tailf.1
 
