build-sys: remove DEFAULT_INCLUDES workaround
The automake stuff uses "-I.". as a default gcc option for includes. This is a
problem for source code where is local includes with a same name like system
includes (e.g.  mntent.h, paths.h). Possible workaround is overwrite the
automake DEFAULT_INCLUDES variable. But this solution produces warnings. The
best way (this patch) is probably rename the files and remove DEFAULT_INCLUDES.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/Makefile.am
+++ b/mount/Makefile.am
@@ -8,12 +8,13 @@ bin_PROGRAMS = mount umount
 sbin_PROGRAMS = losetup swapon
 man_MANS = fstab.5 nfs.5 mount.8 swapoff.8 swapon.8 umount.8 losetup.8
 
-MNTHDRS = fstab.h linux_fs.h mntent.h mount_constants.h my_dev_t.h paths.h \
-	get_label_uuid.h lomount.h mount_blkid.h mount_guess_fstype.h \
-	nfs_mount4.h realpath.h xmalloc.h getusername.h loop.h mount_by_label.h \
-	mount_guess_rootdev.h nfsmount.h sundries.h 
+MNTHDRS = fstab.h linux_fs.h mount_mntent.h mount_constants.h my_dev_t.h \
+	mount_paths.h get_label_uuid.h lomount.h mount_blkid.h \
+	mount_guess_fstype.h nfs_mount4.h realpath.h xmalloc.h \
+	getusername.h loop.h mount_by_label.h mount_guess_rootdev.h \
+	nfsmount.h sundries.h
 
-mount_SOURCES = mount.c fstab.c sundries.c xmalloc.c realpath.c mntent.c \
+mount_SOURCES = mount.c fstab.c sundries.c xmalloc.c realpath.c mount_mntent.c \
 	get_label_uuid.c mount_by_label.c mount_blkid.c mount_guess_fstype.c \
 	getusername.c \
 	nfsmount.c nfsmount_xdr.c nfsmount_clnt.c \
@@ -22,7 +23,7 @@ mount_SOURCES = mount.c fstab.c sundries.c xmalloc.c realpath.c mntent.c \
 
 mount_LDADD = $(top_srcdir)/lib/libenv.a $(top_srcdir)/lib/libsetproctitle.a
 
-umount_SOURCES = umount.c fstab.c sundries.c xmalloc.c realpath.c mntent.c \
+umount_SOURCES = umount.c fstab.c sundries.c xmalloc.c realpath.c mount_mntent.c \
 	getusername.c get_label_uuid.c mount_by_label.c mount_blkid.c \
 	lomount.c \
 	$(MNTHDRS)
