tests: add simple helper that returns info about system
usage: tests/helpers/mnt_test_sysinfo <infoname>

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,5 +1,7 @@
 include $(top_srcdir)/config/include-Makefile.am
 
+SUBDIRS = helpers
+
 EXTRA_DIST = 	commands.sh.in \
 		functions.sh \
 		ts-mount-paths \
