--- a/tests/commands.sh.in
+++ b/tests/commands.sh.in
@@ -1,6 +1,9 @@
 TOPDIR=@top_srcdir@
 TS_TOPDIR=$TOPDIR/tests
 
+# helpers
+TS_HELPER_SYSINFO="$TS_TOPDIR/helpers/mnt_test_sysinfo"
+
 # paths to commands
 TS_CMD_MOUNT=${TS_CMD_MOUNT:-"$TOPDIR/mount/mount"}
 TS_CMD_UMOUNT=${TS_CMD_MOUNT:-"$TOPDIR/mount/umount"}
