--- a/tests/commands.sh.in
+++ b/tests/commands.sh.in
@@ -13,3 +13,7 @@ TS_CMD_SWAPOFF=${TS_CMD_MOUNT:-"$TOPDIR/mount/swapoff"}
 TS_CMD_IPCS=${TS_CMD_IPCS:-"$TOPDIR/sys-utils/ipcs"}
 
 TS_CMD_COL=${TS_CMD_COL:-"$TOPDIR/text-utils/col"}
+
+TS_CMD_NAMEI=${TS_CMD_NAMEI-"$TOPDIR/misc-utils/namei"}
+
+
