--- a/fdisk/Makefile.am
+++ b/fdisk/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-EXTRA_DIST = README.fdisk README.cfdisk
+EXTRA_DIST = README.* sfdisk.examples partitiontype.c
 
 if !M68K
 
@@ -8,7 +8,8 @@ sbin_PROGRAMS = fdisk
 man_MANS = fdisk.8
 fdisk_SOURCES = fdisk.c disksize.c fdiskbsdlabel.c fdisksgilabel.c \
 	fdisksunlabel.c fdiskaixlabel.c i386_sys_types.c partname.c \
-	common.h fdisk.h fdisksunlabel.h fdisksgilabel.h fdiskaixlabel.h fdiskbsdlabel.h
+	common.h fdisk.h fdisksunlabel.h fdisksgilabel.h fdiskaixlabel.h \
+	 fdiskbsdlabel.h
 
 if !SPARC
 
