tests: add mkfs.cramfs tests
This test shows that actual mkfs.cramfs is ugly due MAXENTRIES (100) limit.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -14,7 +14,8 @@ EXTRA_DIST = 	expected/* \
 		ts-ipcs.sh \
 		ts-mkswap-doit \
 		ts-mount-paths \
-		ts-namei-logic
+		ts-namei-logic \
+		ts-cramfs-mkfs
 
 distclean-local:
 	rm -rf output diff
