--- a/tests/commands.sh.in
+++ b/tests/commands.sh.in
@@ -19,5 +19,5 @@ TS_CMD_IPCS=${TS_CMD_IPCS:-"$TOPDIR/sys-utils/ipcs"}
 TS_CMD_COL=${TS_CMD_COL:-"$TOPDIR/text-utils/col"}
 
 TS_CMD_NAMEI=${TS_CMD_NAMEI-"$TOPDIR/misc-utils/namei"}
-
+TS_CMD_LOOK=${TS_CMD_LOOK-"$TOPDIR/misc-utils/look"}
 
