login: add regression test for IP address checking code
The hnmatch() in checktty.c is checking IP addresses if the login util
is compiled without PAM support.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/login-utils/Makefile.am
+++ b/login-utils/Makefile.am
@@ -116,3 +116,8 @@ install-exec-hook::
 	cd $(DESTDIR)$(mandir)/man8 && ln -sf initctl.8 provide.8
 
 endif
+
+noinst_PROGRAMS = checktty_test
+checktty_test_SOURCES = checktty.c login.h
+checktty_test_CFLAGS = -DMAIN_TEST_CHECKTTY
+
