build-sys: add support for audit
You can compile --with-audit now.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/config.h.in
+++ b/config.h.in
@@ -35,6 +35,9 @@
 /* Define to 1 if you have the `lchown' function. */
 #undef HAVE_LCHOWN
 
+/* Define to 1 if you have the `audit' library (-laudit). */
+#undef HAVE_LIBAUDIT
+
 /* Define to 1 if you have the `blkid' library (-lblkid). */
 #undef HAVE_LIBBLKID
 
