login: add audit support
The login command reports AUDIT_USER_LOGIN message to audit system
(depends on --with-audit).

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/login-utils/Makefile.am
+++ b/login-utils/Makefile.am
@@ -67,6 +67,9 @@ else
 login_SOURCES = login.c checktty.c login.h my_crypt.h
 endif
 
+if HAVE_AUDIT
+login_LDADD += -laudit
+endif
 
 if HAVE_SELINUX
 chfn_SOURCES += selinux_utils.c selinux_utils.h
