tests: add hwclock systohc test
The test detects how "hwclock --systohc" untune the clock. Now the hwclock
command causes the hw clock to be wrong by 500ms each time it is reset.

The test resets the clock 10 times and result is 5 sec difference between NTP
and the clock. That's a bug... and it has to bee fixed in a next commit.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -17,7 +17,8 @@ EXTRA_DIST = 	expected/* \
 		ts-namei-logic \
 		ts-cramfs-mkfs \
 		ts-look-separator \
-		ts-login-checktty
+		ts-login-checktty \
+		ts-hwclock-systohc
 
 distclean-local:
 	rm -rf output diff
