--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -64,6 +64,7 @@ if BUILD_WRITE
 
 usrbinexec_PROGRAMS += write
 man_MANS += write.1
+write_CFLAGS = $(SUID_CFLAGS)
 
 if USE_TTY_GROUP
 install-exec-hook::
