tests: add mount -o remount test
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -21,7 +21,9 @@ EXTRA_DIST = 	expected/* \
 		ts-hwclock-systohc \
 		ts-mount-special \
 		ts-mount-mtablock \
-		ts-mount-move
+		ts-mount-move \
+		ts-mount-remount
+
 
 distclean-local:
 	rm -rf output diff
