--- a/mount/Makefile.am
+++ b/mount/Makefile.am
@@ -7,11 +7,12 @@ sbin_PROGRAMS = losetup swapon
 man_MANS = fstab.5 mount.8 swapoff.8 swapon.8 umount.8 losetup.8
 
 MNTHDRS = fstab.h linux_fs.h mount_mntent.h mount_constants.h my_dev_t.h \
-	mount_paths.h get_label_uuid.h lomount.h mount_blkid.h \
+	mount_paths.h get_label_uuid.h lomount.h fsprobe.h \
 	mount_guess_fstype.h realpath.h xmalloc.h \
 	getusername.h loop.h mount_by_label.h sundries.h
+
 mount_common = fstab.c sundries.c xmalloc.c realpath.c mount_mntent.c \
-	getusername.c get_label_uuid.c mount_by_label.c mount_blkid.c \
+	getusername.c get_label_uuid.c mount_by_label.c fsprobe_blkid.c \
 	lomount.c $(MNTHDRS) ../lib/env.c
 
 mount_SOURCES = mount.c $(mount_common) ../lib/setproctitle.c \
@@ -24,7 +25,7 @@ umount_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 umount_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
 
 swapon_SOURCES = swapon.c xmalloc.c \
-	get_label_uuid.c mount_by_label.c mount_blkid.c \
+	get_label_uuid.c mount_by_label.c fsprobe_blkid.c \
 	swap_constants.h realpath.c
 
 losetup_SOURCES = lomount.c loop.h lomount.h
