mount: fsprobe: add libvolume_id support
Signed-off-by: Matthias Koenig <mkoenig@suse.de>
Signed-off-by: Kay Sievers <kay.sievers@vrfy.org>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/Makefile.am
+++ b/mount/Makefile.am
@@ -44,6 +44,15 @@ if HAVE_SELINUX
 mount_LDADD += -lselinux
 endif
 
+if HAVE_VOLUME_ID
+mount_SOURCES += fsprobe_volumeid.c
+umount_SOURCES += fsprobe_volumeid.c
+swapon_SOURCES += fsprobe_volumeid.c
+mount_LDADD += -lvolume_id
+umount_LDADD += -lvolume_id
+swapon_LDADD += -lvolume_id
+endif
+
 if HAVE_PIVOT_ROOT
 sbin_PROGRAMS += pivot_root
 man_MANS += pivot_root.8
