build-sys: do not kick off AM_CFLAGS by SUID_CFLAGS
SUID_CFLAGS are not meant to override the makefile-wide AM_CFLAGS.
(We do not use AM_CFLAGS currently, but we will.)

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/login-utils/Makefile.am
+++ b/login-utils/Makefile.am
@@ -51,9 +51,9 @@ login_LDADD = ../lib/libsetproctitle.a
 newgrp_LDADD =
 vipw_LDADD =
 
-chfn_CFLAGS = $(SUID_CFLAGS)
-chsh_CFLAGS = $(SUID_CFLAGS)
-newgrp_CFLAGS = $(SUID_CFLAGS)
+chfn_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
+chsh_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
+newgrp_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 
 if NEED_LIBCRYPT
 chfn_LDADD += -lcrypt
