--- a/mount/Makefile.am
+++ b/mount/Makefile.am
@@ -19,7 +19,7 @@ mount_SOURCES = mount.c fstab.c sundries.c xmalloc.c realpath.c mount_mntent.c \
 	$(MNTHDRS)
 
 mount_LDADD = $(top_srcdir)/lib/libenv.a $(top_srcdir)/lib/libsetproctitle.a
-mount_CFLAGS = $(SUID_CFLAGS)
+mount_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 
 umount_SOURCES = umount.c fstab.c sundries.c xmalloc.c realpath.c mount_mntent.c \
 	getusername.c get_label_uuid.c mount_by_label.c mount_blkid.c \
@@ -27,7 +27,7 @@ umount_SOURCES = umount.c fstab.c sundries.c xmalloc.c realpath.c mount_mntent.c
 	$(MNTHDRS)
 	
 umount_LDADD = $(top_srcdir)/lib/libenv.a
-umount_CFLAGS = $(SUID_CFLAGS)
+umount_CFLAGS = $(SUID_CFLAGS) $(AM_CFLAGS)
 
 swapon_SOURCES = swapon.c xmalloc.c \
 	get_label_uuid.c mount_by_label.c mount_blkid.c \
