build-sys: move the optimization flags to AM_CFLAGS
The optimization flags are not preprocessor flags.
Moreover, CPPFLAGS and CFLAGS shall be overridable at make time, the
configure script shall not touch them.
Setting AM_CFLAGS in config/include-Makefile.am seems to be TRW.

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/config/include-Makefile.am
+++ b/config/include-Makefile.am
@@ -5,6 +5,7 @@ infodir = $(datadir)/info
 mandir = $(datadir)/man
 
 AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include
+AM_CFLAGS = -fsigned-char -fomit-frame-pointer
 
 DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
 
