--- a/config/include-Makefile.am
+++ b/config/include-Makefile.am
@@ -4,8 +4,6 @@ datadir = $(prefix)/usr/share
 infodir = $(datadir)/info
 mandir = $(datadir)/man
 
-AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include
+AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include \
+	-DLOCALEDIR=\"$(localedir)\"
 AM_CFLAGS = -fsigned-char -fomit-frame-pointer
-
-DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
-
